@@ -2,6 +2,7 @@
 
 	* Added title field to the indexing config (to be used in the advanced search form)
 	* Added site selector to TS and HTML templates
+	* Added site selector procesing to the form (untested)
 
 2009-01-07  Dmitry Dulepov  <dmitry@typo3.org>
 
